# cuda_test

reduce/: CMakeLists.txt
reduce/v1/: CMakeLists.txt  main.cu
reduce/v2/: CMakeLists.txt  main.cu
reduce/v3/: CMakeLists.txt  main.cu
reduce/v4/: CMakeLists.txt  main.cu
reduce/v5/: CMakeLists.txt  main.cu
reduce/v6/: CMakeLists.txt  main.cu
reduce/v7/: CMakeLists.txt  main.cu
reduce/v8/: CMakeLists.txt  main.cu
sgeem/: CMakeLists.txt
sgeem/v1/: CMakeLists.txt  main.cu
sgeem/v2/: main.cu
sgeem/v3/: CMakeLists.txt
